test/corpus/constructs.txt
================================================================================
bitwise shift and and
================================================================================

local <Boolean> SystemReady = ((Mosko.Trilby Glonk >> 8) & 0x01) eq 0x01;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (binary_expression
      (parenthesized_expression
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (member_expression
                (identifier)
                (identifier))
              (number)))
          (number)))
      (number))))

================================================================================
static local with negative initializer
================================================================================

static local <Integer> i = -1;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
unsigned integer suffix
================================================================================

local diagnumber = 0u;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (number)))

================================================================================
multi-word name with trailing number
================================================================================

Cralbo.QHM.Dorn.Plor.XV Glim 4 = Calculate.NAN();

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (member_expression
      (member_expression
        (member_expression
          (member_expression
            (identifier)
            (identifier))
          (identifier))
        (identifier))
      (identifier))
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list))))

================================================================================
when / is state machine
================================================================================

when (Active)
{
	is (Off)
	{
		Active = Wexlar Bonquil Mosko.Vor;
	}
}

--------------------------------------------------------------------------------

(source_file
  (when_statement
    (identifier)
    (is_clause
      (identifier)
      (block
        (assignment_statement
          (identifier)
          (member_expression
            (identifier)
            (identifier)))))))

================================================================================
when / is with multiple is clauses — two-pattern list
================================================================================

when (Active)
{
	is (Off)
	{
		Active = Standby;
	}
	is (Standby or On)
	{
		Active = Off;
	}
}

--------------------------------------------------------------------------------

(source_file
  (when_statement
    (identifier)
    (is_clause
      (identifier)
      (block
        (assignment_statement
          (identifier)
          (identifier))))
    (is_clause
      (is_pattern_list
        (identifier)
        (identifier))
      (block
        (assignment_statement
          (identifier)
          (identifier))))))

================================================================================
when / is with three-pattern list and member paths
================================================================================

when (Mode)
{
	is (State.A or State.B or State.C)
	{
		x = 1;
	}
}

--------------------------------------------------------------------------------

(source_file
  (when_statement
    (identifier)
    (is_clause
      (is_pattern_list
        (member_expression
          (identifier)
          (identifier))
        (member_expression
          (identifier)
          (identifier))
        (member_expression
          (identifier)
          (identifier)))
      (block
        (assignment_statement
          (identifier)
          (number))))))

================================================================================
when / is with negative enumerator value keeps its sign
================================================================================

when (Code)
{
	is (-1 or 2)
	{
		x = 1;
	}
}

--------------------------------------------------------------------------------

(source_file
  (when_statement
    (identifier)
    (is_clause
      (is_pattern_list
        (negative_number
          (number))
        (number))
      (block
        (assignment_statement
          (identifier)
          (number))))))

================================================================================
or outside is-clause stays binary_expression
================================================================================

x = A or B;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
expand loop with interpolation in names
================================================================================

expand (SEG = 1 to 6)
{
	Klumph $(SEG).Glonk 4 = naxID Bnk $(SEG) + 1;
}

--------------------------------------------------------------------------------

(source_file
  (expand_statement
    variable: (identifier)
    start: (number)
    end: (number)
    (block
      (assignment_statement
        target: (member_expression
          object: (identifier)
          property: (identifier))
        value: (binary_expression
          left: (identifier)
          right: (number))))))

================================================================================
if / else if / else chain
================================================================================

if (x)
{
	y = 1;
}
else if (z)
{
	y = 2;
}
else
{
	y = 3;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (identifier)
    consequence: (block
      (assignment_statement
        target: (identifier)
        value: (number)))
    (else_clause
      (if_statement
        condition: (identifier)
        consequence: (block
          (assignment_statement
            target: (identifier)
            value: (number)))
        (else_clause
          (block
            (assignment_statement
              target: (identifier)
              value: (number))))))))

================================================================================
bitwise NOT and compound assignments (manual operators, #31)
================================================================================

x = ~y;
x %= 2;
x &= 2;
x <<= 1;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (unary_expression
      (identifier)))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number)))

================================================================================
remaining compound-assignment operators (+=, -=, *=, /=, |=, ^=, >>=)
================================================================================

x += 1;
x -= 1;
x *= 2;
x /= 2;
x |= 2;
x ^= 2;
x >>= 1;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number))
  (assignment_statement
    (identifier)
    (number)))

================================================================================
if statement without else
================================================================================

if (x)
{
	y = 1;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (identifier)
    consequence: (block
      (assignment_statement
        target: (identifier)
        value: (number)))))

================================================================================
ternary expression — simple
================================================================================

x = a ? b : c;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (ternary_expression
      condition: (identifier)
      consequence: (identifier)
      alternative: (identifier))))

================================================================================
ternary expression — nested consequence (right-associative)
================================================================================

x = a ? b ? c : d : e;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (ternary_expression
      condition: (identifier)
      consequence: (ternary_expression
        condition: (identifier)
        consequence: (identifier)
        alternative: (identifier))
      alternative: (identifier))))

================================================================================
ternary expression — method calls in all three positions
================================================================================

x = Foo.Bar() ? Baz.Qux() : Quux.Corge();

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (ternary_expression
      condition: (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier))
        arguments: (argument_list))
      consequence: (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier))
        arguments: (argument_list))
      alternative: (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier))
        arguments: (argument_list)))))

================================================================================
neq inequality operator — simple
================================================================================

x = a neq b;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
neq chained with or (multiline, mirrors EV-M1 real usage)
================================================================================

if (x neq a or
	y neq b)
{
	z = 1;
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (identifier))
      right: (binary_expression
        left: (identifier)
        right: (identifier)))
    consequence: (block
      (assignment_statement
        target: (identifier)
        value: (number)))))

================================================================================
unary not and logical-not operators
================================================================================

x = not y;
x = !z;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (unary_expression
      (identifier)))
  (assignment_statement
    target: (identifier)
    value: (unary_expression
      (identifier))))

================================================================================
boolean literals
================================================================================

x = true;
local b = false;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    target: (identifier)
    value: (boolean))
  (local_declaration
    name: (identifier)
    value: (boolean)))
