test/corpus/errors.txt
==================
missing right-hand side
:error
==================

x = ;

---

(source_file
  (expression_statement
    (identifier)
    (ERROR)))

==================
unterminated call argument list
:error
==================

Foo(1, 2

---

(source_file
  (ERROR
    (identifier)
    (number)
    (number)))

================================================================================
unterminated string errors on its own line and recovers
:error
================================================================================

local s = "never closed;
local t = 1;

--------------------------------------------------------------------------------
