test/corpus/exponents.txt
================================================================================
local: 1e-05
:error
================================================================================

local <Floating Point> scale = 1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1e-05
:error
================================================================================

result = factor * 1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1e-05
:error
================================================================================

local <Floating Point> scale = +1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1e-05
:error
================================================================================

result = factor * +1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1e-05
:error
================================================================================

local <Floating Point> scale = -1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1e-05
:error
================================================================================

result = factor * -1e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1E-05
:error
================================================================================

local <Floating Point> scale = 1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1E-05
:error
================================================================================

result = factor * 1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1E-05
:error
================================================================================

local <Floating Point> scale = +1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1E-05
:error
================================================================================

result = factor * +1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1E-05
:error
================================================================================

local <Floating Point> scale = -1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1E-05
:error
================================================================================

result = factor * -1E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1e+05
:error
================================================================================

local <Floating Point> scale = 1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1e+05
:error
================================================================================

result = factor * 1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1e+05
:error
================================================================================

local <Floating Point> scale = +1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1e+05
:error
================================================================================

result = factor * +1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1e+05
:error
================================================================================

local <Floating Point> scale = -1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1e+05
:error
================================================================================

result = factor * -1e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1E+05
:error
================================================================================

local <Floating Point> scale = 1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1E+05
:error
================================================================================

result = factor * 1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1E+05
:error
================================================================================

local <Floating Point> scale = +1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1E+05
:error
================================================================================

result = factor * +1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1E+05
:error
================================================================================

local <Floating Point> scale = -1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1E+05
:error
================================================================================

result = factor * -1E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1e05
:error
================================================================================

local <Floating Point> scale = 1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1e05
:error
================================================================================

result = factor * 1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1e05
:error
================================================================================

local <Floating Point> scale = +1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1e05
:error
================================================================================

result = factor * +1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1e05
:error
================================================================================

local <Floating Point> scale = -1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1e05
:error
================================================================================

result = factor * -1e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1E05
:error
================================================================================

local <Floating Point> scale = 1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: 1E05
:error
================================================================================

result = factor * 1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: +1E05
:error
================================================================================

local <Floating Point> scale = +1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1E05
:error
================================================================================

result = factor * +1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1E05
:error
================================================================================

local <Floating Point> scale = -1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: -1E05
:error
================================================================================

result = factor * -1E05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: 1.0e-05
================================================================================

local <Floating Point> scale = 1.0e-05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0e-05
================================================================================

result = factor * 1.0e-05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))

================================================================================
local: +1.0e-05
:error
================================================================================

local <Floating Point> scale = +1.0e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1.0e-05
:error
================================================================================

result = factor * +1.0e-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1.0e-05
================================================================================

local <Floating Point> scale = -1.0e-05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
multiply: -1.0e-05
================================================================================

result = factor * -1.0e-05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (unary_expression
        (number)))))

================================================================================
local: 1.0E-05
================================================================================

local <Floating Point> scale = 1.0E-05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0E-05
================================================================================

result = factor * 1.0E-05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))

================================================================================
local: +1.0E-05
:error
================================================================================

local <Floating Point> scale = +1.0E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1.0E-05
:error
================================================================================

result = factor * +1.0E-05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1.0E-05
================================================================================

local <Floating Point> scale = -1.0E-05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
multiply: -1.0E-05
================================================================================

result = factor * -1.0E-05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (unary_expression
        (number)))))

================================================================================
local: 1.0e+05
================================================================================

local <Floating Point> scale = 1.0e+05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0e+05
================================================================================

result = factor * 1.0e+05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))

================================================================================
local: +1.0e+05
:error
================================================================================

local <Floating Point> scale = +1.0e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1.0e+05
:error
================================================================================

result = factor * +1.0e+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1.0e+05
================================================================================

local <Floating Point> scale = -1.0e+05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
multiply: -1.0e+05
================================================================================

result = factor * -1.0e+05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (unary_expression
        (number)))))

================================================================================
local: 1.0E+05
================================================================================

local <Floating Point> scale = 1.0E+05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0E+05
================================================================================

result = factor * 1.0E+05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))

================================================================================
local: +1.0E+05
:error
================================================================================

local <Floating Point> scale = +1.0E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1.0E+05
:error
================================================================================

result = factor * +1.0E+05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1.0E+05
================================================================================

local <Floating Point> scale = -1.0E+05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
multiply: -1.0E+05
================================================================================

result = factor * -1.0E+05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (unary_expression
        (number)))))

================================================================================
local: 1.0e05
================================================================================

local <Floating Point> scale = 1.0e05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0e05
================================================================================

result = factor * 1.0e05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))

================================================================================
local: +1.0e05
:error
================================================================================

local <Floating Point> scale = +1.0e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
multiply: +1.0e05
:error
================================================================================

result = factor * +1.0e05;

--------------------------------------------------------------------------------

(source_file)

================================================================================
local: -1.0e05
================================================================================

local <Floating Point> scale = -1.0e05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (unary_expression
      (number))))

================================================================================
multiply: -1.0e05
================================================================================

result = factor * -1.0e05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (unary_expression
        (number)))))

================================================================================
local: 1.0E05
================================================================================

local <Floating Point> scale = 1.0E05;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (type_annotation
      (identifier))
    (identifier)
    (number)))

================================================================================
multiply: 1.0E05
================================================================================

result = factor * 1.0E05;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (binary_expression
      (identifier)
      (number))))
